fix menu items visible elements

--- a/frontend/src/assets/elements/buttons.scss
+++ b/frontend/src/assets/elements/buttons.scss
@@ -80,7 +80,7 @@
     width: 100%;
 }
 
-.mobile {
+.buttons-container-mobile {
     flex-wrap: wrap;
     
     @media (max-width: 460px) {
